Test for external reloadable artifacts