@@ -7,8 +7,8 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.function.Supplier;
 
@@ -60,7 +60,7 @@ public class RunAndCheckMojoTestBase extends MojoTestBase {
         //of physical memory as they will consume way more than what they need instead of
         //just running GC
         args.add("-Djvm.args=-Xmx128m");
-        running.execute(args, Collections.emptyMap());
+        running.execute(args, Map.of());
     }
 
     protected void runAndCheck(String... options) throws FileNotFoundException, MavenInvocationException {
@@ -85,7 +85,7 @@ public class RunAndCheckMojoTestBase extends MojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev"), Map.of(), mvnRunProps);
 
         DevModeTestUtils.getHttpErrorResponse();
     }
